Add bottom border to StyledLabel.

On CL https://codereview.chromium.org/2072513003 it was changed calculation of height of StyledLabel, so the |total_height| is equal to the bottom point of lowest sublabel. This doesn't take into consideration a bottom border. Screenshots are on the bug. This CL fixes this.

BUG=697034

Review-Url: https://codereview.chromium.org/2722503005
Cr-Commit-Position: refs/heads/master@{#455495}

Former-commit-id: 2581d91a5a2adfdae460bd25a43b44cac6f80ded